@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package org.activiti.spring.boot.process;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import org.activiti.api.process.model.ProcessInstance;
@@ -37,7 +36,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.Import;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.NONE)
 public class ProcessRuntimeBPMNErrorReceivedIT {
@@ -67,138 +65,138 @@ public class ProcessRuntimeBPMNErrorReceivedIT {
     }
 
     @AfterEach
-    public void cleanUp(){
+    public void cleanUp() {
         processCleanUpUtil.cleanUpWithAdmin();
         listener.clear();
     }
 
     @Test
-    public void should_CatchSubProcessBoundaryErrorEvent_When_ErrorEndEvenThrown(){
-
+    public void should_CatchSubProcessBoundaryErrorEvent_When_ErrorEndEvenThrown() {
         securityUtil.logInAs("user");
 
         ProcessInstance processInstance = processRuntime.start(
-                ProcessPayloadBuilder
-                        .start()
-                        .withProcessDefinitionKey(ERROR_BOUNDARY_EVENT_SUBPROCESS)
-                        .build());
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(ERROR_BOUNDARY_EVENT_SUBPROCESS).build()
+        );
 
         assertThat(processInstance).isNotNull();
 
         checkProcessAndTask(processInstance.getId(), "Task");
 
         assertThat(listener.getErrorReceivedEvents())
-        .isNotEmpty()
-        .extracting(BPMNErrorReceivedEvent::getEventType,
-                    BPMNErrorReceivedEvent::getProcessDefinitionId,
-                    BPMNErrorReceivedEvent::getProcessInstanceId,
-                    event -> event.getEntity().getProcessDefinitionId(),
-                    event -> event.getEntity().getProcessInstanceId(),
-                    event -> event.getEntity().getElementId(),
-                    event -> event.getEntity().getActivityName(),
-                    event -> event.getEntity().getActivityType(),
-                    event -> event.getEntity().getErrorId(),
-                    event -> event.getEntity().getErrorCode()
-        )
-        .contains(Tuple.tuple(BPMNErrorReceivedEvent.ErrorEvents.ERROR_RECEIVED,
-                              processInstance.getProcessDefinitionId(),
-                              processInstance.getId(),
-                              processInstance.getProcessDefinitionId(),
-                              processInstance.getId(),
-                              "catchError",
-                              null,
-                              null,
-                              "errorId",
-                              "123"
-        ));
-
+            .isNotEmpty()
+            .extracting(
+                BPMNErrorReceivedEvent::getEventType,
+                BPMNErrorReceivedEvent::getProcessDefinitionId,
+                BPMNErrorReceivedEvent::getProcessInstanceId,
+                event -> event.getEntity().getProcessDefinitionId(),
+                event -> event.getEntity().getProcessInstanceId(),
+                event -> event.getEntity().getElementId(),
+                event -> event.getEntity().getActivityName(),
+                event -> event.getEntity().getActivityType(),
+                event -> event.getEntity().getErrorId(),
+                event -> event.getEntity().getErrorCode()
+            )
+            .contains(
+                Tuple.tuple(
+                    BPMNErrorReceivedEvent.ErrorEvents.ERROR_RECEIVED,
+                    processInstance.getProcessDefinitionId(),
+                    processInstance.getId(),
+                    processInstance.getProcessDefinitionId(),
+                    processInstance.getId(),
+                    "catchError",
+                    null,
+                    null,
+                    "errorId",
+                    "123"
+                )
+            );
     }
 
     @Test
-    public void should_StartSubProcess_When_ErrorEndEvenThrown(){
-
+    public void should_StartSubProcess_When_ErrorEndEvenThrown() {
         securityUtil.logInAs("user");
 
         ProcessInstance processInstance = processRuntime.start(
-                ProcessPayloadBuilder
-                        .start()
-                        .withProcessDefinitionKey(ERROR_START_EVENT_SUBPROCESS)
-                        .build());
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(ERROR_START_EVENT_SUBPROCESS).build()
+        );
 
         assertThat(processInstance).isNotNull();
 
         checkProcessAndTask(processInstance.getId(), "Task");
 
         assertThat(listener.getErrorReceivedEvents())
-        .isNotEmpty()
-        .extracting(BPMNErrorReceivedEvent::getEventType,
-                    BPMNErrorReceivedEvent::getProcessDefinitionId,
-                    BPMNErrorReceivedEvent::getProcessInstanceId,
-                    event -> event.getEntity().getProcessDefinitionId(),
-                    event -> event.getEntity().getProcessInstanceId(),
-                    event -> event.getEntity().getElementId(),
-                    event -> event.getEntity().getActivityName(),
-                    event -> event.getEntity().getActivityType(),
-                    event -> event.getEntity().getErrorId(),
-                    event -> event.getEntity().getErrorCode()
-        )
-        .contains(Tuple.tuple(BPMNErrorReceivedEvent.ErrorEvents.ERROR_RECEIVED,
-                              processInstance.getProcessDefinitionId(),
-                              processInstance.getId(),
-                              processInstance.getProcessDefinitionId(),
-                              processInstance.getId(),
-                              "subStart1",
-                              null,
-                              null,
-                              "errorId",
-                              "123"
-        ));
-
+            .isNotEmpty()
+            .extracting(
+                BPMNErrorReceivedEvent::getEventType,
+                BPMNErrorReceivedEvent::getProcessDefinitionId,
+                BPMNErrorReceivedEvent::getProcessInstanceId,
+                event -> event.getEntity().getProcessDefinitionId(),
+                event -> event.getEntity().getProcessInstanceId(),
+                event -> event.getEntity().getElementId(),
+                event -> event.getEntity().getActivityName(),
+                event -> event.getEntity().getActivityType(),
+                event -> event.getEntity().getErrorId(),
+                event -> event.getEntity().getErrorCode()
+            )
+            .contains(
+                Tuple.tuple(
+                    BPMNErrorReceivedEvent.ErrorEvents.ERROR_RECEIVED,
+                    processInstance.getProcessDefinitionId(),
+                    processInstance.getId(),
+                    processInstance.getProcessDefinitionId(),
+                    processInstance.getId(),
+                    "subStart1",
+                    null,
+                    null,
+                    "errorId",
+                    "123"
+                )
+            );
     }
 
     @Test
-    public void should_CatchCallActivityBoundaryErrorEvent_When_ErrorEndEvenThrown(){
-
+    public void should_CatchCallActivityBoundaryErrorEvent_When_ErrorEndEvenThrown() {
         securityUtil.logInAs("user");
 
         ProcessInstance processInstance = processRuntime.start(
-                ProcessPayloadBuilder
-                        .start()
-                        .withProcessDefinitionKey(ERROR_BOUNDARY_EVENT_CALLACTIVITY)
-                        .build());
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(ERROR_BOUNDARY_EVENT_CALLACTIVITY).build()
+        );
 
         assertThat(processInstance).isNotNull();
 
         checkProcessAndTask(processInstance.getId(), "Task");
 
         assertThat(listener.getErrorReceivedEvents())
-        .isNotEmpty()
-        .extracting(BPMNErrorReceivedEvent::getEventType,
-                    BPMNErrorReceivedEvent::getProcessDefinitionId,
-                    BPMNErrorReceivedEvent::getProcessInstanceId,
-                    event -> event.getEntity().getProcessDefinitionId(),
-                    event -> event.getEntity().getProcessInstanceId(),
-                    event -> event.getEntity().getElementId(),
-                    event -> event.getEntity().getActivityName(),
-                    event -> event.getEntity().getActivityType(),
-                    event -> event.getEntity().getErrorId(),
-                    event -> event.getEntity().getErrorCode()
-        )
-        .contains(Tuple.tuple(BPMNErrorReceivedEvent.ErrorEvents.ERROR_RECEIVED,
-                              processInstance.getProcessDefinitionId(),
-                              processInstance.getId(),
-                              processInstance.getProcessDefinitionId(),
-                              processInstance.getId(),
-                              "catchError",
-                              null,
-                              null,
-                              "errorId",
-                              "123"
-        ));
+            .isNotEmpty()
+            .extracting(
+                BPMNErrorReceivedEvent::getEventType,
+                BPMNErrorReceivedEvent::getProcessDefinitionId,
+                BPMNErrorReceivedEvent::getProcessInstanceId,
+                event -> event.getEntity().getProcessDefinitionId(),
+                event -> event.getEntity().getProcessInstanceId(),
+                event -> event.getEntity().getElementId(),
+                event -> event.getEntity().getActivityName(),
+                event -> event.getEntity().getActivityType(),
+                event -> event.getEntity().getErrorId(),
+                event -> event.getEntity().getErrorCode()
+            )
+            .contains(
+                Tuple.tuple(
+                    BPMNErrorReceivedEvent.ErrorEvents.ERROR_RECEIVED,
+                    processInstance.getProcessDefinitionId(),
+                    processInstance.getId(),
+                    processInstance.getProcessDefinitionId(),
+                    processInstance.getId(),
+                    "catchError",
+                    null,
+                    null,
+                    "errorId",
+                    "123"
+                )
+            );
     }
 
     private void checkProcessAndTask(String processInstanceId, String taskName) {
-
         ProcessInstance processInstance = processRuntime.processInstance(processInstanceId);
         assertThat(processInstance).isNotNull();
 
@@ -206,17 +204,11 @@ public class ProcessRuntimeBPMNErrorReceivedIT {
     }
 
     private void checkTask(String processInstanceId, String taskName) {
+        GetTasksPayload getTasksPayload = new GetTasksPayloadBuilder().withProcessInstanceId(processInstanceId).build();
 
-        GetTasksPayload getTasksPayload = new GetTasksPayloadBuilder()
-                                                .withProcessInstanceId(processInstanceId)
-                                                .build();
-
-        Page<Task> tasks = taskRuntime.tasks(Pageable.of(0,
-                                                         50),
-                                             getTasksPayload);
+        Page<Task> tasks = taskRuntime.tasks(Pageable.of(0, 50), getTasksPayload);
 
         assertThat(tasks.getContent()).hasSize(1);
-        assertThat(tasks.getContent().get(0).getName()).isEqualTo(taskName);
+        assertThat(tasks.getContent().getFirst().getName()).isEqualTo(taskName);
     }
-
 }
